--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,9 @@
                 <br />
                 {% block content %} {% endblock %}
                 <br />
+                <div class="out">
                 {% block output %} {% endblock %}
+                </div>
                 <br />
                 {% block finish %} {% endblock %}
             </div>
