--- a/templates/data.html
+++ b/templates/data.html
@@ -16,7 +16,7 @@
         <option value="* FROM gs_elemental_resonance">Elemental Resonance</option>
         <option value="* FROM gs_recommended_party">Compatible Characters</option>
     </select>
-    <input type="submit" value="Submit"/>
+    <input type="submit" value="Submit" class="sub"/>
 </form>
 {% endblock %}
 
