--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
     <input type="text" name="user" />
     <br /> <br />
     <label for="pw">password: </label>
-    <input type="text" name="pw" /><br /> <br />
-    <input type="submit" value="Submit"/>
+    <input type="password" name="pw" /><br /> <br />
+    <input type="submit" value="Submit" class="sub"/>
 </form>
 {% endblock %}
 {% block output %}
