--- a/templates/mydata.html
+++ b/templates/mydata.html
@@ -14,7 +14,7 @@
         <option value="* FROM user_character"> Your Characters </option>
         <option value="*, resonance_concat(team_id), team_atk(team_id) FROM user_team;"> Your Teams </option>
     </select>
-    <input type="submit" value="Submit"/>
+    <input type="submit" value="Submit" class="sub"/>
 </form>
 {% endblock %}
 
