--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
                 <br />
                 {% block content %} {% endblock %}
                 <br />
+                {% block error %} {% endblock %}
                 <div class="out">
                 {% block output %} {% endblock %}
                 </div>
