--- a/templates/weapons.html
+++ b/templates/weapons.html
@@ -107,6 +107,7 @@
         <th> id </th>
         <th> weapon_name </th>
         <th> refinement_lvl</th>
+        <th> weapon_type </th>
     </tr>
     {% endif %}
 {% for row in output %}
