--- a/templates/character.html
+++ b/templates/character.html
@@ -63,6 +63,7 @@
     <br />
     <label for="equipped">Enter character's weapon:</label>
     <select name="equipped">
+        <option value="" disabled selected> WeaponName, Level </option>
         <option value=-1> None </option>
         {% for row in weaps %}
         <option value="{{ row['weapon_id']}}"> {{ row['weapon_name']}}, {{ row['refinement_lvl']}} </option>
@@ -103,6 +104,7 @@
     <br />
     <label for="equipped">Enter character's weapon:</label>
     <select name="equipped">
+        <option value="" disabled selected> WeaponName, Level </option>
         <option value=-1> None </option>
         {% for row in weaps %}
         <option value="{{ row['weapon_id']}}"> {{ row['weapon_name']}}, {{ row['refinement_lvl']}} </option>
@@ -158,11 +160,14 @@
 {% endblock %}
 
 {% block finish %}
+<div class="containerLn">
 <h3> go back to weapon data: </h3>
     <p> <a class="btn moveForward" href="{{ url_for('enter_weapons') }}"> return to weapons </a> </p>  
-
+</div>
 {% if proceed %}
+<div class="containerRn">
     <h3> move on to team data: </h3>
     <p> <a class="btn moveForward" href="{{ url_for('enter_teams') }}"> enter teams </a> </p>
+</div>
 {% endif %} 
 {% endblock %}
